@@ -1235,3 +1235,7 @@ Fri Mar 25 16:50:16 2011                        Michael Jennings (mej)
 
 Allow adding of RPM and DEB package files to repositories.
 ----------------------------------------------------------------------
+Fri Apr  1 13:58:49 2011                        Michael Jennings (mej)
+
+Fix rpmcmp.c to be compatible with RPM 4.8.  Sigh.
+----------------------------------------------------------------------
